syntax = "proto3";

package sifnode.oracle.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Sifchain/sifnode/x/oracle/types";

// NetworkDescriptor is a unique identifier for all chains that Sifchain
// enables. Numbers MUST BE BETWEEN 0-9999, Sifnode WILL PANIC if a number
// is below 0 or larger then 9999 as we use human readable denoms.
enum NetworkDescriptor {
  // Not currently in use
  NETWORK_DESCRIPTOR_UNSPECIFIED = 0;
  // https://ethereum.org
  NETWORK_DESCRIPTOR_ETHEREUM = 1;
  // Bitcoin mainnet
  NETWORK_DESCRIPTOR_BITCOIN = 2;
  // https://github.com/ethereum/ropsten
  NETWORK_DESCRIPTOR_ETHEREUM_TESTNET_ROPSTEN = 3;
  // https://www.binance.org
  NETWORK_DESCRIPTOR_BINANCE_SMART_CHAIN = 56;
  // https://testnet.binance.org/
  NETWORK_DESCRIPTOR_BINANCE_SMART_CHAIN_TESTNET = 97;
  // Ganache local testnet
  NETWORK_DESCRIPTOR_GANACHE = 5777;
  // Hardhat local testnet
  NETWORK_DESCRIPTOR_HARDHAT = 9999;
}

message NetworkIdentity { NetworkDescriptor network_descriptor = 1; }
